fix logo overlapping header link on mobile

--- a/upload/catalog/view/theme/ambacht/stylesheet/stylesheet.css
+++ b/upload/catalog/view/theme/ambacht/stylesheet/stylesheet.css
@@ -1015,6 +1015,7 @@ h2.price {
 @media screen and (max-width: 680px) {
     #logo {
         width: 100%;
+        max-width: 70px;
         height: 50px;
         display: inline-block;
     }
